[gd_scene load_steps=4 format=3 uid="uid://bjrvp7ok1x5se"]

[ext_resource type="Script" uid="uid://bnd8vw2whh1wg" path="res://main.gd" id="1_l2b8f"]
[ext_resource type="PackedScene" uid="uid://beonflmqtctni" path="res://player.tscn" id="4_7kksa"]
[ext_resource type="PackedScene" uid="uid://b5pdc7byx8k1r" path="res://hud.tscn" id="7_wimqa"]

[node name="Main" type="Node2D"]
script = ExtResource("1_l2b8f")

[node name="Player" parent="." instance=ExtResource("4_7kksa")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 96)
limit_left = 0

[node name="HUD" parent="." instance=ExtResource("7_wimqa")]

[connection signal="player_damaged" from="." to="Player" method="_on_player_damaged"]
[connection signal="player_damaged" from="." to="HUD" method="_on_main_player_damaged"]
[connection signal="player_dead" from="." to="Player" method="_on_player_dead"]
[connection signal="player_dead" from="." to="HUD" method="_on_main_player_dead"]
[connection signal="game_restarted" from="HUD" to="." method="_on_game_restarted"]
[connection signal="game_restarted" from="HUD" to="Player" method="start_game"]
